--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,19 @@
 /*  your css code here. If applicable */
+.container{
+	display:flex;
+	justify-content:start;
+	align-items:center;
+	
+}
+img{
+	width="100px";
+	height="200px";
+	object-fit:cover;
+}
+#btn{
+	padding:20px;
+	background-color:red;
+	color:white;
+	border-radius:10px;
+	
+}
