--- a/styles.css
+++ b/styles.css
@@ -10,14 +10,15 @@
 	
 }
 img{
-	width="100px";
-	height="200px";
+	width:300px;
+	height:150px;
 	object-fit:cover;
+	margin-right:20px;
 }
 #btn{
-	padding:20px;
+	padding:10px;
 	background-color:red;
 	color:white;
-	border-radius:10px;
+	border-radius:5px;
 	
 }
