--- a/styles.css
+++ b/styles.css
@@ -13,8 +13,8 @@ body{
 	
 }
 img{
-	width:300px;
-	height:150px;
+	width:400px;
+	height:400px;
 	object-fit:cover;
 	margin-right:20px;
 }
@@ -23,5 +23,10 @@ img{
 	background-color:red;
 	color:white;
 	border-radius:5px;
-	
+
+}
+.right{
+	display:flex;
+	flex-direction:column;
+	justify-content:center;
 }
